[package]
name = "ashpan"
version = "0.1.0"
license = "MIT OR Apache-2.0"

repository = "https://github.com/swooster/ashpan"
readme = "README.md"
description = "RAII helpers for ash"
keywords = ["ash", "raii", "scopeguard", "vulkan"]
categories = ["graphics", "memory-management", "rendering"]
authors = ["Steve Wooster <s.f.m.wooster@gmail.com>"]

edition = "2018"

[dependencies]
ash = "0.33.0"
scopeguard = "1.1.0"

[dev-dependencies]
version-sync = "0.9.2"
