[package]
name = "ashpan"
version = "0.6.2"
license = "MIT OR Apache-2.0"

repository = "https://github.com/swooster/ashpan"
readme = "README.md"
description = "RAII helpers for ash"
keywords = ["ash", "raii", "scopeguard", "vulkan"]
categories = ["graphics", "memory-management", "rendering"]
authors = ["Steve Wooster <s.f.m.wooster@gmail.com>"]

edition = "2021"

[dependencies]
ash = "0.37.0"

[dev-dependencies]
scopeguard = "1.1.0"
version-sync = "0.9.4"
